--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Rokupo</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Rokupo</title>
 </head>
 <body>
-  <h1>Rokupo ToDo Lists</h1>
-  <my-router></my-router>
+<main class="container">
+    <h1>Rokupo ToDo Lists</h1>
+    <my-router></my-router>
+</main>
 </body>
 </html>
