--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,8 @@
     <title>Rokupo</title>
 </head>
 <body>
+<my-nav></my-nav>
 <main class="container">
-    <h1>Rokupo ToDo Lists</h1>
     <my-router></my-router>
 </main>
 </body>
